@startuml agent_json_communication
title UML: Agent JSON Communication and Orchestrator Contracts

allowmixing
left to right direction
skinparam shadowing false
skinparam componentStyle rectangle
skinparam defaultTextAlignment center
skinparam wrapWidth 180
skinparam class {
  BackgroundColor #F7FAFC
  BorderColor #2F4F6F
}
skinparam component {
  BackgroundColor #F2F7FF
  BorderColor #3A5F8A
}
skinparam artifact {
  BackgroundColor #FFF8E7
  BorderColor #7A5A00
}

class HandoffContext <<TypedDict>> {
  root_url: str
  target_url: str
  page_type: str
  classification_reasoning: str
  route_source: str
  navigation_policy: str
  required_evidence: list[str]
  memory_hints: str
  pattern_context: str
  candidate_title: str
  candidate_channel: str
  landing_server_hints: list[dict]
}

class ClassificationResult <<JSON/Pydantic>> {
  url: str
  page_type: PageType
  confidence: Confidence
  reasoning: str
}

class MatchInfo <<JSON/Pydantic>> {
  url: str
  title: str
  channel: str
  route: str
  route_source: str
  server_hints: list[dict]
  iframes: list[str]
  video_srcs: list[str]
  player_urls: list[str]
  patterns: dict
}

class ExtractionResult <<JSON/Pydantic>> {
  url: str
  page_type: PageType
  status: ExtractionStatus
  streams: StreamURL[]
  screenshots: str[]
  embedded_urls: str[]
  servers: ServerResult[]
  primary_channel: str
  metadata: dict
}

class ServerResult <<JSON/Pydantic>> {
  label: str
  status: str
  stream_urls: str[]
  m3u8_urls: str[]
  mpd_urls: str[]
  mp4_urls: str[]
  screenshot_url: str
  embedded_url: str
  player_iframe_url: str
  network_diagnostics: list[dict]
  iframe_diagnostics: list[dict]
}

class StreamURL <<JSON/Pydantic>> {
  url: str
  protocol: str
  source_layer: str
  channel_name: str
}

class ProviderInfo <<JSON/Pydantic>> {
  stream_url: str
  ip: str
  hostname: str
  org: str
  provider: str
  abuse_email: str
  whois_raw: str
}

class TakedownEmail <<JSON/Pydantic>> {
  provider: str
  abuse_email: str
  channel_name: str
  subject: str
  body: str
  infringing_url: str
  stream_urls: str[]
  screenshot_urls: str[]
  server_labels: str[]
}

component "OrchestratorAgent\nrouting authority" as Orchestrator
component "ClassificationAgent" as Classification
component "LandingPageAgent" as Landing
component "HostingPageAgent" as Hosting
component "EmbeddedPageAgent" as Embedded
component "IPInfoTool\nprovider analysis" as Provider
component "EmailTool\nreview-only drafts" as Email
artifact "PipelineResult\nfinal aggregate JSON" as PipelineResult

Orchestrator --> HandoffContext : render_handoff(ctx)
Orchestrator --> Classification : run(url)
Classification --> ClassificationResult : returns
ClassificationResult --> Orchestrator : route_after_classification

Orchestrator --> Landing : HandoffContext JSON text
Landing --> ExtractionResult : raw JSON normalized
ExtractionResult --> MatchInfo : metadata.hosting_pages[]
MatchInfo --> Orchestrator : pending_hosting_urls\nor direct stream hints

Orchestrator --> Hosting : HandoffContext with match/server hints
Hosting --> ExtractionResult : servers, streams,\nembedded handoffs
ExtractionResult --> ServerResult : servers[]
ServerResult --> StreamURL : stream fields normalized
ServerResult --> Orchestrator : embedded_url/player_iframe_url

Orchestrator --> Embedded : HandoffContext with player URL
Embedded --> ExtractionResult : streams or blocker evidence
ExtractionResult --> StreamURL : streams[]

Orchestrator --> Provider : stream_urls[]
Provider --> ProviderInfo : returns
Orchestrator --> Email : infringing_url + providers + extractions
Email --> TakedownEmail : returns

Orchestrator --> PipelineResult : aggregate classification,\nmatches, extractions, streams,\nproviders, emails, final status

note bottom of Orchestrator
  Agents do not call each other directly.
  Every crossing between stages is a typed JSON contract.
  The orchestrator normalizes raw specialist JSON before routing it onward.
end note

note bottom of HandoffContext
  HandoffContext is rendered into the child task brief.
  It carries evidence and constraints, not private model reasoning.
end note

note bottom of ExtractionResult
  Landing, hosting, and embedded agents all return ExtractionResult,
  but their metadata shape is stage-specific.
end note
@enduml
